--- a/about.html
+++ b/about.html
@@ -71,16 +71,16 @@
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h2 class="mb-3">About me.</h2>
-                        <p class="mb-3">I’m Alexandra — a Transformative Coach, Architect, and the founder of noein.</p>
+                        <h2 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h2>
+                        <p class="mb-3">A Transformative Coach, Architect, and the founder of noein.</p>
                         <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
                         <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
-                        <h6 class="">A space to think. A space to understand. A space to become.</h6>
+                        <h6 class="">A space to think. A space to understand. A space to become.</h6></br></br>
 
-                          <div class="d-flex flex-wrap align-items-center" style="padding-top: 10px;">
+                          <!-- div class="d-flex flex-wrap align-items-center" style="padding-top: 10px;">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say Hello</a>
-                        </div>
+                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Me</a>
+                        </div -->
                     </div>
                     <div class="col-lg-6 text-center">
                         <div class="headshot-card">
