--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-7 mb-4 mb-lg-0">
-                    <h2 class="mb-3">Begin your coaching journey.</h2>
+                    <h2 class="mb-3">Begin your <i class="blue-font-color"> journey</i>.</h2>
                     <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm, supportive, and collaborative space for you to reflect and explore what matters most.</p>
                     <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
                     <p class="mb-3">Together we’ll reconnect with your values, clarify your direction, and help you act with intention.</p>
@@ -85,10 +85,10 @@
                             <li>Availability focused on evenings and weekends.</li>
                           </ul>
 
-                        </br>
+                        </br></br>
                         <div class="d-flex flex-wrap align-items-center">
+
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
-                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Say Hello</a>
                         </div>
                       </div>
                   </div>
