--- a/contact.html
+++ b/contact.html
@@ -83,12 +83,13 @@
                             <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
                             <li>One-to-one coaching — 60-minute sessions online.</li>
                             <li>Availability focused on evenings and weekends.</li>
+                            <li>I work with clients worldwide online.</li>
                           </ul>
 
                         </br></br>
                         <div class="d-flex flex-wrap align-items-center">
 
-                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
+                            <!-- a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a Discovery Call</a -->
                         </div>
                       </div>
                   </div>
@@ -103,9 +104,9 @@
                         <div class="content-card h-100">
                             <h4 class="mb-3">Get in touch.</h4>
                             <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
-                            <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.<br>I work with clients worldwide online.</p>
-                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Schedule on Calendly</a>
-                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                            <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a></p>
+                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a Discovery Call</a>
+                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send me an email</a>
                         </div>
                     </div>
                 </div>
