--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="row col-spacing-30 align-items-start">
                   <div class="col-lg-12">
                       <div class="content-card h-100">
-                          <h3 class="mb-3">Coaching for inner clarity.</h3>
+                          <h4 class="mb-3">Coaching for inner clarity.</h4>
                           <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
                           <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
                           <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
@@ -112,7 +112,7 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-12">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">A calm space for honest conversation.</h3>
+                            <h4 class="mb-3">A calm space for honest conversation.</h4>
                             <p class="mb-3">You’re invited to slow down and reconnect with yourself; this is a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want those choices to take you.</p>
                             <p class="mb-3">Coaching here is not about supplying quick fixes. It’s about helping you uncover the clarity, confidence, and direction that are already within you.</p>
                         </div>
@@ -140,7 +140,7 @@
                   <div class="row col-spacing-30 align-items-start">
                       <div class="col-lg-12">
                           <div class="content-card h-100">
-                              <h3 class="mb-3">Be authentically, you.</h3>
+                              <h4 class="mb-3">Be authentically, you.</h4>
                               <p class="mb-3">At noein, we support a process where self-awareness opens the door to deeper understanding - and from that clarity, choices and changes arise that feel aligned, natural, and authentically.</p>
                           </div>
                       </div>
@@ -202,7 +202,7 @@
                 <div class="content-card">
                     <div class="row mb-4 align-items-center">
                         <div class="col-lg-8">
-                            <h3 class="mb-0">What people say.</h3>
+                            <h4 class="mb-0">What people say.</h4>
                         </div>
                         <div class="col-lg-4 text-lg-right mt-3 mt-lg-0">
                             <a class="btn btn-outline-dark" href="contact.html">Book a discovery call</a>
@@ -256,10 +256,10 @@
         <section class="section-spacer">
             <div class="container">
                 <div class="content-card text-center">
-                    <h3 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h3>
+                    <h4 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h4>
                   </br>
-                    <a class="btn accent-btn mr-3 mb-2" href="contact.html">Explore coaching</a>
-                    <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                  <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
+                  <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send me an email</a>
                 </div>
             </div>
         </section>
