--- a/about.html
+++ b/about.html
@@ -70,20 +70,20 @@
         <section class="section-spacer">
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
-                    <div class="col-lg-6 mb-4 mb-lg-0">
+                    <div class="col-lg-7 mb-4 mb-lg-0">
                         <h2 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h2>
                         <p class="mb-3">A Transformative Coach, Architect, and the founder of noein.</p>
                         <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
-                        <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
-                        <h6 class="">A space to think. A space to understand. A space to become.</h6></br></br>
+                        <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p></br>
+                        <h5 class="">A space to think. A space to understand. A space to become.</h5></br></br>
 
                           <!-- div class="d-flex flex-wrap align-items-center" style="padding-top: 10px;">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
                             <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Me</a>
                         </div -->
                     </div>
-                    <div class="col-lg-6 text-center">
-                        <div class="headshot-card">
+                    <div class="col-lg-5 mb-4 mb-lg-0 text-center">
+                        <div class="card headshot-card">
                             <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alex" class="img-fluid rounded">
                         </div>
                     </div>
@@ -171,11 +171,11 @@
 
                     <div class="col-lg-12">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Ready to begin?</h3>
+                            <h4 class="mb-3">Ready to begin?</h3>
                             <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
 
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send me an email</a>
                         </div>
                     </div>
                 </div>
