--- a/contact.html
+++ b/contact.html
@@ -135,9 +135,9 @@
                     </div>
                     <div class="col-12 col-md-4 text-center text-md-right">
                         <ul class="list-horizontal-unstyled mb-0">
-                            <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li>
+                            <!-- li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li -->
                             <li><a href="https://calendly.com/alexandraa-noein/30min"><i class="far fa-calendar contact"></i></a></li>
-                            <li><a href="https://www.instagram.com/noeincoaching/"><i class="fab fa-instagram contact"></i></a></li>
+                            <li><a href="https://www.instagram.com/noein_coaching/"><i class="fab fa-instagram contact"></i></a></li>
                             <li><a href="mailto:alex@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
                         </ul>
                     </div>
