--- a/about.html
+++ b/about.html
@@ -164,16 +164,15 @@
             </div>
         </section>
 
-
-        <section class="section-spacer">
+<section class="section-spacer">
             <div class="container">
-                <div class="row col-spacing-30 align-items-start">
-
-                    <div class="col-lg-12">
-                        <div class="content-card h-100">
-                            <h4 class="mb-3">Ready to begin?</h3>
+                <div class="content-card text-center">
+                    <div class="row mb-4 align-items-center">
+                        <div class="col-lg-12">
+                            <h4 class="mb-0">Ready to begin?</h4>
                             <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
-
+                        </div>
+                        <div class="col-lg-12 mt-3 mt-lg-0">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                             <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send me an email</a>
                         </div>
@@ -181,6 +180,7 @@
                 </div>
             </div>
         </section>
+        
     </main>
 
     <footer class="footer-white">
