--- a/contact.html
+++ b/contact.html
@@ -97,14 +97,16 @@
           </div>
       </section>
 
-        <section class="section-spacer">
+<section class="section-spacer">
             <div class="container">
-                <div class="row col-spacing-30 align-items-start">
-                    <div class="col-lg-12">
-                        <div class="content-card h-100">
+                <div class="content-card text-center">
+                    <div class="row mb-4 align-items-center">
+                        <div class="col-lg-12">
                             <h4 class="mb-3">Get in touch.</h4>
                             <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
                             <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a></p>
+                        </div>
+                        <div class="col-lg-12 mt-3 mt-lg-0">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a Discovery Call</a>
                             <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send me an email</a>
                         </div>
