--- a/index.html
+++ b/index.html
@@ -204,35 +204,35 @@
                                     <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences. Through her guidance, I gained deeper self-awareness, a clearer understanding of my strengths, and a fresh perspective on my professional environment.”</p>
-                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“Alexandra was considerate and thought-provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
-                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“It’s been great working with Alexandra. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
-                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“These sessions help you realise you have all the tools and answers to achieve what you want in certain aspects of your life.”</p>
-                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“I have learnt so much about myself during our sessions and I would highly recommend them for anyone who is questioning their direction in life.”</p>
-                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                             </div>
@@ -244,11 +244,20 @@
 
         <section class="section-spacer">
             <div class="container">
-                <div class="content-card text-center">
+                <div class="content-card text-center h-100">
                     <h4 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h4>
                   </br>
-                  <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                  <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send me an email</a>
+                <div class="row align-items-center">
+                  <div class="col-lg-2">
+                  </div>
+                    <div class="col-lg-4">
+                        <a class="btn accent-btn mr-3 mb-2 text-center" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a class="btn btn-outline-dark mr-3 mb-2 text-center" href="mailto:alex@noein.co.uk">Send me an email</a>
+                    </div>
+                      <div class="col-lg-2">
+                      </div>
                 </div>
             </div>
         </section>
