--- a/about.html
+++ b/about.html
@@ -146,6 +146,10 @@
                                             <li>Pg Diploma in Architecture (Part 2)</li>
                                             <li>RIBA Professional Practice Qualification (Part 3)</li>
                                         </ul>
+                                      </br>
+                                        <div class="card headshot-card text-center">
+                                            <img src="assets/images/animas@2x.png" alt="Portrait of Alex" class="img-fluid rounded" style="padding-top: 10%; max-width: 40%; padding-bottom: 5%;">
+                                        </div>
                                     </div>
                                 </div>
 
@@ -153,23 +157,27 @@
             </div>
         </section>
 
-
         <section class="section-spacer">
             <div class="container">
-                <div class="row col-spacing-30 align-items-start">
+                <div class="content-card text-center h-100">
+                  <h4 class="mb-3">Ready to begin?</h3>
+                  <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
 
-                    <div class="col-lg-12">
-                        <div class="content-card h-100">
-                            <h4 class="mb-3">Ready to begin?</h3>
-                            <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
-
-                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send me an email</a>
-                        </div>
+                <div class="row align-items-center">
+                  <div class="col-lg-2">
+                  </div>
+                    <div class="col-lg-4">
+                        <a class="btn accent-btn mr-3 mb-2 text-center" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                     </div>
+                    <div class="col-lg-4">
+                        <a class="btn btn-outline-dark mr-3 mb-2 text-center" href="mailto:alex@noein.co.uk">Send me an email</a>
+                    </div>
+                      <div class="col-lg-2">
+                      </div>
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer class="footer-white">
