--- a/about.html
+++ b/about.html
@@ -128,9 +128,9 @@
                                     <ul class="list-checks mb-4">
                                         <li>Format – One-to-one coaching.</li>
                                         <li>Session length – 60 minutes.</li>
-                                        <li>Location – Online.</li>
+                                        <li>Location – Online, working with clients worldwide.</li>
                                         <li>Availability – Mostly evenings and weekends.</li>
-                                        <li>Where I’m based – London, UK, working with clients worldwide online.</li>
+                                        <li>Payment discussed in the discovery call, to suit client needs.</li>
                                     </ul>
                                     <p class="mb-0">We begin with a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other, explore what you’d like to work on, and see whether this approach feels right for you.</p>
                                 </div>
