Enhance SEO metadata and site content

--- a/about.html
+++ b/about.html
@@ -2,10 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Meet Alex, the architect and transformative coach behind Noein.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind noein – a calm coaching space for clarity, confidence and meaningful change.">
     <meta name="keywords" content="Alex, Noein, transformative coach, about">
-    <title>noein | about me</title>
+    <link rel="canonical" href="https://www.noein.co.uk/about">
+    <title>noein | about alexandra - transformative coach</title>
+    <meta property="og:site_name" content="noein">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.noein.co.uk/about">
+    <meta property="og:title" content="noein | About Alexandra - transformative coach">
+    <meta property="og:description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind noein – a calm coaching space for clarity, confidence and meaningful change.">
+    <meta property="og:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="noein | About Alexandra - transformative coach">
+    <meta name="twitter:description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind noein – a calm coaching space for clarity, confidence and meaningful change.">
+    <meta name="twitter:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfilePage",
+  "mainEntity": {
+    "@type": "Person",
+    "name": "Alexandra",
+    "jobTitle": "Transformative Coach and Architect",
+    "description": "Transformative Coach, Architect and founder of noein, offering calm, reflective coaching sessions online.",
+    "url": "https://www.noein.co.uk/about"
+  }
+}
+</script>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/favicons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicons/favicon.svg" />
@@ -60,8 +85,8 @@
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h1 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h1>
-                        <p class="mb-3">A Transformative Coach, Architect, and the founder of noein.</p>
+                        <h1 class="mb-3">About Alexandra – Transformative Coach and founder of noein</h1>
+                        <h2 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h2>
                         <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
                         <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p></br>
                         <h3 class="">A space to think. A space to understand. A space to become.</h3></br></br>
@@ -73,7 +98,7 @@
                     </div>
                     <div class="col-lg-5 mb-4 mb-lg-0 text-center">
                         <div class="card headshot-card">
-                            <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alex" class="img-fluid rounded">
+                            <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alexandra, Transformative Coach and founder of noein" class="img-fluid rounded">
                         </div>
                     </div>
                 </div>
@@ -109,7 +134,8 @@
                         <div class="content-card h-100">
                             <h2 class="mb-3">My philosophy.</h2>
                             <p class="mb-3">Life is often influenced by factors we don’t fully notice. In our busy, demanding, and sometimes stressful lives, it’s easy to lose sight of what truly matters and to find ourselves living in ways that don’t fully reflect our dreams or values.</p>
-                            <p class="mb-0">Coaching helps us pause, notice the choices we’ve made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.</p>
+                            <p class="mb-3">Coaching helps us pause, notice the choices we’ve made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.</p>
+                            <p class="mb-0">Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater clarity, confidence and alignment in their life or work.</p>
                         </div>
                     </div>
 
@@ -148,7 +174,7 @@
                                         </ul>
                                       </br>
                                         <div class="card headshot-card text-center">
-                                            <img src="assets/images/animas@2x.png" alt="Portrait of Alex" class="img-fluid rounded" style="padding-top: 10%; max-width: 40%; padding-bottom: 5%;">
+                                            <img src="assets/images/animas@2x.png" alt="Portrait of Alexandra, Transformative Coach and founder of noein" class="img-fluid rounded" style="padding-top: 10%; max-width: 40%; padding-bottom: 5%;">
                                         </div>
                                     </div>
                                 </div>
