--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Explore coaching with noein — pricing, sessions, and how to book.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Ready to begin coaching? Contact Alexandra at noein to book a free 30-minute discovery call and explore whether transformative coaching feels right for you.">
     <meta name="keywords" content="coaching, discovery call, pricing, contact, Noein">
-    <title>noein | contact</title>
+    <link rel="canonical" href="https://www.noein.co.uk/contact">
+    <title>noein | contact - begin your coaching journey</title>
+    <meta property="og:site_name" content="noein">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.noein.co.uk/contact">
+    <meta property="og:title" content="noein | Contact - begin your coaching journey">
+    <meta property="og:description" content="Ready to begin coaching? Contact Alexandra at noein to book a free 30-minute discovery call and explore whether transformative coaching feels right for you.">
+    <meta property="og:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="noein | Contact - begin your coaching journey">
+    <meta name="twitter:description" content="Ready to begin coaching? Contact Alexandra at noein to book a free 30-minute discovery call and explore whether transformative coaching feels right for you.">
+    <meta name="twitter:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/favicons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicons/favicon.svg" />
@@ -60,8 +72,8 @@
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-7 mb-4 mb-lg-0">
-                    <h1 class="mb-3">Begin your <i class="blue-font-color"> journey</i>.</h1>
-                    <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm, supportive, and collaborative space for you to reflect and explore what matters most.</p>
+                    <h1 class="mb-3">Begin your coaching journey</h1>
+                    <p class="mb-3">I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm, supportive and collaborative space for you to reflect and explore what matters most.</p>
                     <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
                     <p class="mb-3">Together we’ll reconnect with your values, clarify your direction, and help you act with intention.</p>
                     </div>
@@ -91,6 +103,7 @@
                 <div class="content-card text-center h-100">
                   <h2 class="mb-3">Get in touch.</h2>
                   <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
+                  <p class="mb-3">Whether you’re based in London or elsewhere in the world, we can work together online at a pace that suits you.</p>
                   <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a></p>
 
                 <div class="row align-items-center">
