--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Noein is a calm coaching space to pause, think, and move forward with clarity.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="noein offers calm, one-to-one transformative coaching online, helping you find clarity, confidence and direction in life and work. Based in London.">
     <meta name="keywords" content="coaching, clarity, thinking space, noein">
-    <title>noein | a space to think</title>
+    <link rel="canonical" href="https://www.noein.co.uk/">
+    <title>noein | coaching for inner clarity – a space to think</title>
+    <meta property="og:site_name" content="noein">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.noein.co.uk/">
+    <meta property="og:title" content="noein | Coaching for inner clarity – a space to think">
+    <meta property="og:description" content="noein offers calm, one-to-one transformative coaching online, helping you find clarity, confidence and direction in life and work. Based in London.">
+    <meta property="og:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="noein | Coaching for inner clarity – a space to think">
+    <meta name="twitter:description" content="noein offers calm, one-to-one transformative coaching online, helping you find clarity, confidence and direction in life and work. Based in London.">
+    <meta name="twitter:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "noein",
+  "url": "https://www.noein.co.uk/",
+  "description": "noein offers calm, one-to-one transformative coaching online, helping you find clarity, confidence and direction in life and work.",
+  "areaServed": {
+    "@type": "Place",
+    "name": "Online, based in London, United Kingdom"
+  },
+  "founder": {
+    "@type": "Person",
+    "name": "Alexandra",
+    "jobTitle": "Transformative Coach and Architect"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "email": "alex@noein.co.uk",
+    "contactType": "customer service"
+  }
+}
+</script>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/favicons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicons/favicon.svg" />
@@ -62,7 +97,8 @@
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
                             <div class="content-card content-card--translucent h-100">
-                              <h1 class="mb-0 text-center">A space to <i class="blue-font-color">think</i>.</h1>
+                              <h1 class="mb-2 text-center">Transformative coaching for inner clarity</h1>
+                              <h2 class="mb-0 text-center">A space to <i class="blue-font-color">think</i>.</h2>
                             </div>
                         </div>
               </div>
@@ -75,7 +111,7 @@
                   <div class="col-lg-12">
                       <div class="content-card h-100">
                           <h2 class="mb-3">Coaching for inner clarity.</h2>
-                          <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
+                          <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you. noein is an online coaching practice based in London, offering one-to-one transformative coaching for clients in the UK and worldwide.</p>
                           <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
                           <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
                           </div>
@@ -89,7 +125,7 @@
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
                             <div class="content-card content-card--translucent h-100">
-                              <h1 class="mb-0 text-center">A space to <i class="blue-font-color">understand</i>.</h1>
+                              <h2 class="mb-0 text-center">A space to <i class="blue-font-color">understand</i>.</h2>
                             </div>
                         </div>
               </div>
@@ -116,7 +152,7 @@
                         <div class="row col-spacing-30 align-items-start">
                           <div class="col-lg-12">
                               <div class="content-card content-card--translucent h-100">
-                                <h1 class="mb-0 text-center">A space to <i class="blue-font-color">become</i>.</h1>
+                                <h2 class="mb-0 text-center">A space to <i class="blue-font-color">become</i>.</h2>
                               </div>
                           </div>
                 </div>
@@ -180,6 +216,7 @@
                                 <li>Ready to reconnect with your values and what feels true for you.</li>
                                 <li>Looking for gentle, grounded support rather than pressure or quick fixes.</li>
                             </ul>
+                            <p class="mt-3 mb-0">You can read more about Alexandra’s background on the <a href="/about">About page</a>.</p>
                         </div>
                     </div>
                 </div>
