--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <div class="row col-spacing-30 align-items-start">
                   <div class="col-lg-12">
                       <div class="content-card h-100">
-                          <h2 class="mb-3">Coaching for inner clarity.</h2>
+                          <h2 class="mb-3">Transformative coaching for inner clarity.</h2>
                           <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you. noein is an online coaching practice based in London, offering one-to-one transformative coaching for clients in the UK and worldwide.</p>
                           <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
                           <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
