--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-7 mb-4 mb-lg-0">
-                    <h1 class="mb-3">Begin your coaching journey</h1>
+                    <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
                     <p class="mb-3">I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm, supportive and collaborative space for you to reflect and explore what matters most.</p>
                     <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
                     <p class="mb-3">Together we’ll reconnect with your values, clarify your direction, and help you act with intention.</p>
