--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h1 class="mb-3">I'm <i class="blue-font-colour">Alexandra</i>.</h1>
+                        <h1 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h1>
                         <h2 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h2>
                         <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
                         <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p></br>
