--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
     <meta property="og:url" content="https://www.noein.co.uk/about">
     <meta property="og:title" content="noein | About Alexandra - transformative coach">
     <meta property="og:description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind noein – a calm coaching space for clarity, confidence and meaningful change.">
-    <meta property="og:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
+    <meta property="og:image" content="https://www.noein.co.uk/assets/images/noein-logo@2x.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="noein | About Alexandra - transformative coach">
     <meta name="twitter:description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind noein – a calm coaching space for clarity, confidence and meaningful change.">
-    <meta name="twitter:image" content="https://www.noein.co.uk/assets/images/alex-avatar-photo-colour@2x.png">
+    <meta name="twitter:image" content="https://www.noein.co.uk/assets/images/noein-logo@2x.png">
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -174,7 +174,7 @@
                                         </ul>
                                       </br>
                                         <div class="card headshot-card text-center">
-                                            <img src="assets/images/animas@2x.png" alt="Portrait of Alexandra, Transformative Coach and founder of noein" class="img-fluid rounded" style="padding-top: 10%; max-width: 40%; padding-bottom: 5%;">
+                                            <img src="assets/images/animas@2x.png" alt="Accreditation of Animas Coaching School" class="img-fluid rounded" style="padding-top: 10%; max-width: 40%; padding-bottom: 5%;">
                                         </div>
                                     </div>
                                 </div>
