--- a/about.html
+++ b/about.html
@@ -168,6 +168,7 @@
                                         <h2 class="mb-3">My qualifications.</h2>
                                         <ul class="list-checks mb-0">
                                             <li>Accredited Diploma in Transformative Coaching</li>
+                                            <li>Working towards ICF accreditation</li>
                                             <li>BA (Hons) Degree in Architecture (Part 1)</li>
                                             <li>Pg Diploma in Architecture (Part 2)</li>
                                             <li>RIBA Professional Practice Qualification (Part 3)</li>
