--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
                                         <li>Session length – 60 minutes.</li>
                                         <li>Location – Online, working with clients worldwide.</li>
                                         <li>Availability – Mostly evenings and weekends.</li>
-                                        <li>As Noein begins, I’m offering one-to-one sessions at an introductory rate of £50 per session, creating an accessible way to explore coaching together.</li>
+                                        <li>As Noein begins, I’m offering one-to-one sessions at an introductory rate of £50 per session for a limited time — an accessible way to explore coaching together.</li>
                                     </ul>
                                     <p class="mb-0">We begin with a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other, explore what you’d like to work on, and see whether this approach feels right for you.</p>
                                 </div>
