--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                                     <ul class="list-checks mb-4">
                                         <li>Format – One-to-one coaching.</li>
                                         <li>Session length – 60 minutes.</li>
-                                        <li>Location – Online, working with clients worldwide.</li>
+                                        <li>Location – Online, working with clients worldwide. Sessions are offered in English and Greek.</li>
                                         <li>Availability – Mostly evenings and weekends.</li>
                                         <li>As Noein begins, I’m offering one-to-one sessions at an introductory rate of £50 per session for a limited time — an accessible way to explore coaching together.</li>
                                     </ul>
