--- a/index.html
+++ b/index.html
@@ -96,9 +96,17 @@
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
-                            <div class="content-card content-card--translucent h-100">
-                              <h1 class="mb-0 text-center">A space to <i class="blue-font-color">think</i>.</h1>
-                            </div>
+                            <div class="content-card content-card--translucent h-100 text-center">
+  <img 
+    src="assets/images/space-to-think.jpg" 
+    alt="A quiet moment of reflection" 
+    class="img-fluid mb-4 rounded"
+  >
+  <h1 class="mb-0">
+    A space to <i class="blue-font-color">think</i>.
+  </h1>
+</div>
+
                         </div>
               </div>
             </div>
