--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
     <div class="navbar-placeholder"></div>
 
     <main class="flex-fill">
+        <!-- HERO IMAGE -->
+<section class="hero-image">
+  <img src="assets/images/hero.png" alt="A quiet space to think">
+</section>
 
+        
               <section class="section-spacer section-hero-intro">
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
