--- a/index.html
+++ b/index.html
@@ -93,7 +93,19 @@
         <!-- HERO IMAGE -->
 <section class="hero-image">
   <img src="assets/images/hero.png" alt="A quiet space to think">
+
+  <div class="hero-overlay">
+    <blockquote>
+      <p>
+        “Within yourself is a stillness, a sanctuary to which you can retreat at any time and be yourself.”
+      </p>
+      <footer>
+        — Hermann Hesse
+      </footer>
+    </blockquote>
+  </div>
 </section>
+
 
         
               <section class="section-spacer section-hero-intro">
