--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
   </div>
 </section>
 
+  <div class="hero-overlay">
+    <blockquote>
+      <p>
+        “Within yourself is a stillness, a sanctuary to which you can retreat at any time and be yourself.”
+      </p>
+      <footer>
+        — Hermann Hesse
+      </footer>
+    </blockquote>
+  </div>
+</section>
+
 
         
               <section class="section-spacer section-hero-intro">
