--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
       <p>
         “Within yourself is a stillness, a sanctuary to which you can retreat at any time and be yourself.”
       </p>
-      <footer>
-        — Hermann Hesse
-      </footer>
+      <footer>— Hermann Hesse</footer>
     </blockquote>
   </div>
 </section>
+
 
 
 
