--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                         <a class="nav-link" href="about.html"><p class="underlineload grey-font-color">About</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
+    <a class="nav-link" href="services.html">
+        <p class="underlineload grey-font-color">Services</p>
+    </a>
+</li>
+                    <li class="nav-item grey-font-color">
                         <a class="nav-link" href="contact.html"><p class="underlineload grey-font-color">Contact</p></a>
                     </li>
                 </ul>
