--- a/services.html
+++ b/services.html
@@ -9,15 +9,12 @@
     <link rel="canonical" href="https://www.noein.co.uk/services">
     <title>noein | coaching services</title>
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/favicons/favicon-96x96.png" sizes="96x96" />
 
-    <!-- CSS -->
     <link href="assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet">
     <link href="assets/css/additional.css" rel="stylesheet">
 
-    <!-- Fonts/Icons -->
     <link href="assets/plugins/font-awesome-pro/css/all.css" rel="stylesheet">
 </head>
 
@@ -56,33 +53,59 @@
     </div>
 </section>
 
-<!-- WHO I WORK WITH -->
+<!-- SERVICES GRID -->
 <section class="section-spacer">
     <div class="container">
-        <div class="content-card">
-            <h2 class="mb-3">Who coaching is for.</h2>
-            <p>
-                I work with individuals and professionals who feel drawn to pause,
-                reflect, and realign — often during moments of transition or uncertainty.
-            </p>
-        </div>
-    </div>
-</section>
+        <div class="row col-spacing-30 align-items-start">
 
-<!-- WHAT COACHING HELPS WITH -->
-<section class="section-spacer">
-    <div class="container">
-        <div class="content-card">
-            <h2 class="mb-3">What coaching can help with.</h2>
-            <ul class="list-checks mb-0">
-                <li>Gaining clarity on direction or next steps</li>
-                <li>Feeling stuck or uncertain</li>
-                <li>Reconnecting with values and priorities</li>
-                <li>Building confidence in decision-making</li>
-                <li>Navigating change or transition</li>
-                <li>Understanding unhelpful thought patterns</li>
-                <li>Creating more calm and alignment</li>
-            </ul>
+            <div class="col-lg-6">
+                <div class="content-card h-100">
+                    <h2 class="mb-3">Who I work with.</h2>
+                    <p>
+                        I support individuals and professionals who feel a pull toward
+                        something more aligned — often during moments of transition,
+                        uncertainty, or quiet dissatisfaction.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="content-card h-100">
+                    <h2 class="mb-3">What coaching can help with.</h2>
+                    <ul class="list-checks mb-0">
+                        <li>Gaining clarity on direction or next steps</li>
+                        <li>Exploring a sense of feeling stuck or off-track</li>
+                        <li>Reconnecting with values and priorities</li>
+                        <li>Building confidence in your own judgement</li>
+                        <li>Navigating change or transition</li>
+                        <li>Understanding unhelpful thought patterns</li>
+                        <li>Creating more calm and alignment</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="content-card h-100">
+                    <h2 class="mb-3">My philosophy.</h2>
+                    <p>
+                        Coaching is an invitation to pause and notice what’s shaping
+                        your life beneath the surface. From this awareness, new
+                        choices and directions naturally emerge.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="content-card h-100">
+                    <h2 class="mb-3">My coaching style.</h2>
+                    <p>
+                        My approach is reflective, calm, and spacious. I meet you
+                        where you are, following your pace and what naturally arises
+                        in the space we create together.
+                    </p>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
@@ -132,7 +155,6 @@
 
 </div>
 
-<!-- JS -->
 <script src="assets/plugins/jquery.min.js"></script>
 <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
 <script src="assets/js/functions.js"></script>
